--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,77 +22,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build & Release Blix
+      - name: Build Blix Plugins
+        run: cd ./blix-plugins/glfx-plugin && npm ci && npm run build
+
+      - name: Build/Release Blix
         run: npm run dist
         env:
           GH_TOKEN: ${{ secrets.TEST_TOKEN }}
-
-      # - name: Build/release Electron app
-      #   uses: samuelmeuli/action-electron-builder@v1
-      #   with:
-      #     github_token: ${{ secrets.github_token }}
-
-      #     # If the commit is tagged with a version (e.g. "v1.0.0"),
-      #     # release the app after building
-      #     # release: ${{ startsWith(github.ref, 'refs/tags/v') }}
-      #     release: true
-
-# name: Build Codebase
-
-# on:
-#   push:
-#     branches: [ master, dev ]
-#   pull_request:
-#     branches: [ master, dev ]
-#     types: [opened, synchronize, reopened, ready_for_review]
-# permissions:
-#   contents: read
-
-# jobs:
-#   start:
-#     name: Start State 🚀🚀🚀
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Starting 
-#       id: init
-#       run: |
-#         echo "Starting building of ${{ github.repository }}"
-
-#   build_project:
-#     name: Build on all platforms
-#     runs-on: ${{ matrix.os }}
-#     strategy:
-#       matrix:
-#         os: [ubuntu-latest, windows-latest, macOS-latest]
-#     needs: start
-#     steps:
-#       - name: Checkout for ${{ runner.os }}
-#         uses: actions/checkout@v3
-#       - name: Set up Node 18
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: 18
-
-#       - name: Cache dependencies
-#         uses: actions/cache@v2
-#         with:
-#           path: ~/.npm
-#           key: npm-${{ hashFiles('package-lock.json') }}
-#           restore-keys: npm-
-
-#       - name: Install dependencies
-#         run: npm ci
-#       - name: Run tests and collect coverage
-#         run: npm run test
-#       - name: Build Project for ${{ runner.os }}
-#         run: npm run build
-
-#   end:
-#     name: End State ✅✅✅
-#     runs-on: ubuntu-latest
-#     needs: build_project
-#     steps:
-#     - name: Ending 
-#       id: init
-#       run: |
-#         echo "Ending building of ${{ github.repository }}"
