--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       - name: Check out Git repository
@@ -26,6 +26,13 @@ jobs:
         run: cd ./blix-plugins/glfx-plugin && npm ci && npm run build
 
       - name: Build/Release Blix
-        run: npm run dist
+        run: |
+          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
+            npm run dist -- --linux deb
+          elif [ "${{ matrix.os }}" = "windows-latest" ]; then
+            npm run dist -- --windows nsis
+          elif [ "${{ matrix.os }}" = "macos-latest' ]; then
+            echo "macOS build not supported yet"
+          fi
         env:
           GH_TOKEN: ${{ secrets.TEST_TOKEN }}
