--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "blix",
   "description": "Blix - A cross-platform AI-assisted graph photo editor",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ArmandKrynauw/Blix"
+    "url": "https://github.com/ArmandKrynauw/Blix.git"
   },
   "author": {
     "name": "The Spanish Inquisition",
