--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,11 +28,13 @@ jobs:
       - name: Build/Release Blix
         run: |
           if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-            npm run dist -- --linux deb AppImage --x64 --arm64
+            # npm run dist -- --linux deb AppImage --x64 --arm64
+            npm run dist -- --linux deb AppImage --x86
           elif [ "${{ matrix.os }}" = "windows-latest" ]; then
             npm run dist -- --windows nsis
           elif [ "${{ matrix.os }}" = "macos-latest" ]; then
-            npm run dist -- --mac dmg --x64 --arm64
+            # npm run dist -- --mac dmg --x64 --arm64
+            npm run dist -- --mac dmg --arm64
           fi
         env:
           GH_TOKEN: ${{ secrets.TEST_TOKEN }}
