--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.2",
+    "marked": "^9.0.3",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "playwright": "^1.36.0",
