--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "start:electron:dev": "npm-run-all -s build:electron:dev start:electron:nodemon",
     "start:electron": "sleep 5 && npm-run-all -p build:electron:dev:watch start:electron:dev",
     "test": "jest --config jest.config.json",
-    "preplaywrite": "npm run build",
-    "playwright": "playwright test",
+    "playwright": "npm run build && NODE_ENV=test playwright test",
     "postinstall": "electron-builder install-app-deps",
     "prepack": "npm run build",
     "pack": "electron-builder --dir",
