--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@neoconfetti/svelte": "^1.0.0",
     "@popperjs/core": "^2.11.8",
     "@types/chokidar": "^2.1.3",
+    "archiver": "^6.0.1",
     "blix_svelvet": "^1.0.19",
     "child_process": "^1.0.2",
     "chokidar": "^3.5.3",
@@ -97,6 +98,7 @@
     "svelte": "^3.59.0",
     "tailwind-merge": "^1.13.2",
     "tinykeys": "^1.4.0",
+    "unzipper": "^0.10.14",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -112,11 +114,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.2.2",
     "@tsconfig/svelte": "^4.0.1",
+    "@types/archiver": "^5.3.3",
     "@types/clean-css": "^4.2.6",
     "@types/electron-prompt": "^1.6.1",
     "@types/html-minifier": "^4.0.2",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.0.0",
+    "@types/unzipper": "^0.10.7",
     "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
