--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Build/Release Blix
         run: |
           if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-            # npm run dist -- --linux deb AppImage --x64 --arm64
-            npm run dist -- --linux deb --x64 --arm64
+            npm run dist -- --linux deb AppImage --x64 --arm64
+            # npm run dist -- --linux deb --x64 --arm64
           elif [ "${{ matrix.os }}" = "windows-latest" ]; then
             npm run dist -- --windows nsis
           elif [ "${{ matrix.os }}" = "macos-latest" ]; then
@@ -51,4 +51,4 @@ jobs:
           GH_TOKEN: ${{ secrets.TEST_TOKEN }}
         shell: bash
 
-    timeout-minutes: 20
+    timeout-minutes: 30
