--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "svelte-preprocess": "^5.0.3",
     "svelte-splitpanes": "^0.7.13",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-palette-generator": "^0.4.5",
     "terser": "^5.17.1",
     "ts-jest": "^29.1.0",
     "tslib": "^2.5.0",
