--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,10 @@ name: Build/release
 on:
   push:
     branches:
-      - dev
       - master
+  pull_request:
+    branches:
+      - dev
 
 jobs:
   Build:
