--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -3,7 +3,7 @@ coverage:
     project:
       default:
         # basic
-        target: 10%
+        target: 0%
         threshold: 10%
         # advanced settings
         branches:
@@ -13,3 +13,7 @@ coverage:
         if_ci_failed: error #success, failure, error, ignore
         informational: true
         only_pulls: false
+    patch:
+      default:
+        informational: true
+comment: false
